--- a/web/index.html
+++ b/web/index.html
@@ -16,15 +16,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="This is my portfolio.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="my_profile">
+  <meta name="apple-mobile-web-app-title" content="Yassin Abdulmahdi">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>my_profile</title>
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+
+  <title>Yassin Abdulmahdi</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
